@@ -8,7 +8,7 @@ use utf8;
 use parent 'Class::Accessor';
 use List::Util qw(uniq);
 
-our $VERSION = '0.13';
+our $VERSION = '0.14';
 
 Travel::Status::DE::DBRIS::Formation::Group->mk_ro_accessors(
 	qw(designation name train_no train_type description desc_short destination has_sectors model series start_percent end_percent)
@@ -423,6 +423,9 @@ sub parse_powertype {
 
 sub parse_model {
 	my ($self) = @_;
+
+	# TODO also consider power type (91/94) and country,
+	# see https://github.com/derf/travelynx/issues/294
 
 	my %ml = (
 		'011'      => 0,
