@@ -1,3 +1,9 @@
+Travel::Status::DE::DBRIS 0.14 - Fri Sep 19 2025
+
+    * dbris-m: Do not break --(raw-)json if the requested stop name is not an
+      exact match
+    * Location: Set is_additional for additional stops based on text remarks
+
 Travel::Status::DE::DBRIS 0.13 - Mon Aug 25 2025
 
     * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
